# vocal_transcriber

./: .gitignore  CMakeLists.txt  Dockerfile  IOHandler.py  README.md  audio_input.py  audio_processing.py  main.py
C++/: .gitignore  Audio.cpp  Audio.h  AudioFeatures.cpp  AudioFeatures.h  AudioUtil.cpp  AudioUtil.h  SignalProcessing.cpp  SignalProcessing.h  Test.cpp  commands.txt  main.cpp  planning.txt
C++/include/: Audio.h  AudioUtil.h
C++/src/: Audio.cpp  AudioFeatures.cpp  main.cpp
include/: Audio.h  AudioFeatures.h  SignalProcessing.h
python/: audio_processing.py  main.py
src/: Audio.cpp  AudioFeatures.cpp  AudioUtil.cpp  CMakeLists.txt  SignalProcessing.cpp  main.cpp
test/: CMakeLists.txt  TestSignalProcessing.cpp
